Reformatted code to Google Style format